changed logos with transparent one

--- a/LaTeXvsHTML/index.html
+++ b/LaTeXvsHTML/index.html
@@ -16,7 +16,7 @@
   <header class="sticky-header">
     <section class="container nav-container">
 
-      <img src="./img/html_logo2.png" alt="HTML logo" />
+      <img src="./img/html_logo.png" alt="HTML logo" />
       <nav>
         <ul>
           <li><a href="#whatIsIt">Кратко запознанство</a></li>
@@ -29,7 +29,7 @@
         </ul>
       </nav>
 
-      <img src="./img/latex_logo.jpg" alt="HTML logo" />
+      <img src="./img/latex_logo.png" alt="LaTeX logo" />
     </section>
   </header>
 
