added some links above the examples

--- a/LaTeXvsHTML/referat.html
+++ b/LaTeXvsHTML/referat.html
@@ -249,6 +249,10 @@ near the origin. This example is on page \pageref{fig:mesh1}.
 
       <section class="output-container">
         <h2>Резултат от Пример 1</h2>
+        <p id="sourceLink">[5] Изображение с пример за код на Латех: [ <a
+            href="https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes#Adding_math_to_LaTeX"
+            target="_blank">https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes#Adding_math_to_LaTeX</a> ]
+        </p>
         <p>Това е резултатът от изпълнения код:</p>
         <img src="./img/LaTeX1.png" alt="Пример1 LaTeX">
       </section>
@@ -299,6 +303,10 @@ but by using another command.
 
       <section class="output-container">
         <h2>Резултат от Пример 2</h2>
+        <p id="sourceLink">[5] Изображение с пример за код на Латех: [ <a
+            href="https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes#Adding_math_to_LaTeX"
+            target="_blank">https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes#Adding_math_to_LaTeX</a> ]
+        </p>
         <p>Това е резултатът от изпълнения код:</p>
         <img src="./img/LaTeX2.png" alt="Пример2 LaTeX">
       </section>
@@ -554,6 +562,9 @@ Display math mode:
       <section class="codeHTML">
 
         <h2>Семантичен HTML</h2>
+
+        <p id="sourceLink">[11] Semantic HTML photo: [ <a href="https://www.semrush.com/blog/semantic-html5-guide/"
+            target="_blank">https://www.semrush.com/blog/semantic-html5-guide/</a> ] </p>
 
         <section class="text-content-img">
           <section class="text-content">
