--- a/LaTeXvsHTML/referat.html
+++ b/LaTeXvsHTML/referat.html
@@ -563,7 +563,8 @@ Display math mode:
 
         <h2>Семантичен HTML</h2>
 
-        <p id="sourceLink">[11] Semantic HTML photo: [ <a href="https://www.semrush.com/blog/semantic-html5-guide/"
+        <p id="sourceLink">[11] Картинката описваща семантичния HTML: [ <a
+            href="https://www.semrush.com/blog/semantic-html5-guide/"
             target="_blank">https://www.semrush.com/blog/semantic-html5-guide/</a> ] </p>
 
         <section class="text-content-img">
